# Topaz

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  LICENSE.md  README.md  aabb_8hpp_source.html  adapter_8hpp_source.html  align_8hpp_source.html  animated__texture_8hpp_source.html  animation_8hpp_source.html  annotated.html  annotated_dup.js  api_2component_8hpp_source.html  api_2device_8hpp_source.html  api_2job_8hpp_source.html  api_2keyboard_8hpp_source.html  api_2monitor_8hpp_source.html  api_2mouse_8hpp_source.html  api_2output_8hpp_source.html  api_2processor_8hpp_source.html  api_2render__pass_8hpp_source.html  api_2renderer_8hpp_source.html  api_2resource_8hpp_source.html  api_2shader_8hpp_source.html  api_2window_8hpp_source.html  assert_8hpp_source.html  asset_8hpp_source.html  attachment_8hpp_source.html  attribute__binding__description_8hpp_source.html  attribute__collection_8hpp_source.html  audio_8hpp_source.html  backend_2vk_2render__pass_8hpp_source.html  base_8hpp_source.html  basic__list_8hpp_source.html  bindless__sampler_8hpp_source.html  block_8hpp_source.html  (+2403 more)
demo/: CMakeLists.txt
demo/core/: CMakeLists.txt  engine_info_demo.cpp  key_press_demo.cpp  mouse_press_demo.cpp  window_demo.cpp
demo/core/window/: CMakeLists.txt  window_demo.cpp  window_demo.hpp
demo/gl/: CMakeLists.txt  basic.fragment.glsl  basic.vertex.glsl  bindless_texture_demo.cpp  compute_demo.compute.tzsl  dynamic_triangle_demo.fragment.glsl  dynamic_triangle_demo.fragment.tzsl  dynamic_triangle_demo.vertex.glsl  dynamic_triangle_demo.vertex.tzsl  graphics_demo.cpp  graphics_demo.hpp  invert_triangle_demo.fragment.tzsl  invert_triangle_demo.vertex.tzsl  mesh_demo.cpp  multi_draw_demo.cpp  postprocess_demo.cpp  shader_demo.cpp  ssbo_tzglp_demo.cpp  triangle_demo.fragment.tzsl  triangle_demo.vertex.glsl  triangle_demo.vertex.tzsl  tz_bloom_demo.cpp  tz_blur_triangle_demo.cpp  tz_compute_demo.compute.tzsl  tz_compute_demo.cpp  tz_compute_demo_render.vertex.tzsl  tz_dynamic_triangle_demo.cpp  tz_dynamic_triangle_demo.fragment.tzsl  tz_dynamic_triangle_demo.vertex.tzsl  tz_gpu_driven_demo.cpp  tz_invert_triangle_demo.cpp  tz_multi_draw_demo.cpp  tz_terrain_demo.cpp  tz_triangle_demo.cpp  tz_triangle_demo.fragment.tzsl  tz_triangle_demo.vertex.tzsl  vkfront_temp_demo.cpp  vkfront_temp_demo.vertex.tzsl
demo/gl/2/: CMakeLists.txt  tz_triangle_demo.cpp
demo/gl/ogl2/: CMakeLists.txt  ogl2_texture_demo.cpp  ogl2_triangle_demo.cpp
demo/gl/shaders/: blur.fragment.tzsl  blur.vertex.tzsl  fst.fragment.tzsl  (+17 more)
demo/input/: CMakeLists.txt  pc_input_demo.cpp
demo/phys/: CMakeLists.txt  physics_demo.cpp
demo/ren/: CMakeLists.txt
demo/render/: CMakeLists.txt  blur_demo.cpp  lighting_demo.cpp  postprocess_demo.cpp  render_demo.cpp  terrain_demo.cpp  tessellation_demo.cpp
demo/tz/: CMakeLists.txt  tz_triangle_demo.cpp
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  DoxygenLayout.xml  doxygen-awesome.css
lib/: CMakeLists.txt  topaz_imgui_config.hpp  tz_imgui_config.hpp  tz_vma.cpp
lib/VulkanMemoryAllocator/: CMakeLists.txt
lib/assimp/: CMakeLists.txt  Makefile  assimp.pc  assimpTargets-release.cmake  assimpTargets.cmake  cmake_install.cmake  revision.h
lib/debugbreak/: CMakeLists.txt
lib/glad/: CMakeLists.txt  setup.py
lib/imgui/: CMakeLists.txt  imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_internal.h  imgui_widgets.cpp
lib/stb_image/: CMakeLists.txt  stb_image.h  stb_image_write.h
lib/tracy/: .gitignore  CMakeLists.txt
src/test/: CMakeLists.txt  test_asset.cpp  test_functional.cpp  test_generic.cpp  test_geometry.cpp  test_memory.cpp  test_numeric.cpp  test_scene.cpp  test_string.cpp  test_texture.cpp  test_vector.cpp
test/: CMakeLists.txt  run_all_test_executables.cmake  test_framework.hpp  test_harness.hpp  tz_initialise_test.cpp
test/algo/: CMakeLists.txt  container_test.cpp  math_test.cpp  static_test.cpp
test/core/: CMakeLists.txt  allocator_test.cpp  callback_test.cpp  clone_test.cpp  handle_test.cpp  initialise_test.cpp  job_test.cpp  matrix_test.cpp  message_test.cpp  quaternion_test.cpp  text_test.cpp  time_test.cpp  transform_hierarchy_test.cpp  types_test.cpp  types_test2.cpp  tz_container_test.cpp  vector_test.cpp
test/geo/: CMakeLists.txt  aabb_test.cpp  matrix_test.cpp  quaternion_test.cpp  sphere_test.cpp  vector_test.cpp
test/gl/: CMakeLists.txt  a.vertex.tzsl  buffer_test.cpp  empty.compute.tzsl  empty.fragment.tzsl  empty.vertex.tzsl  frame_test.cpp  headless_triangle_test.cpp  image_test.cpp  include_me.header.glsl  include_me2.header.glsl  include_me3.header.glsl  include_me4.header.glsl  managed_buffer_test.cpp  manager_test.cpp  mesh_test.cpp  object_test.cpp  render_pass_test.cpp  renderer_test.cpp  shader_compiler_test.cpp  shader_preprocessor_test.cpp  shader_test.cpp  shader_test.fragment.glsl  shader_test.fragment.tzsl  shader_test.vertex.glsl  shader_test.vertex.tzsl  six_writer.compute.tzsl  stdlib_test.compute.tzsl  texture_test.cpp  triangle_test.fragment.tzsl  triangle_test.vertex.tzsl  tz_renderer_test.cpp  tz_renderer_test2.cpp  tz_resource_test.cpp  tz_shader_test.cpp
test/input/: CMakeLists.txt  clipboard_test.cpp
test/lua/: CMakeLists.txt  tz_lua_bindings_test.cpp
test/memory/: CMakeLists.txt  block_test.cpp  demap_test.cpp  pool_test.cpp
test/phys/: CMakeLists.txt  motion_integration_test.cpp  tz_body_test.cpp  tz_collider_test.cpp
test/render/: CMakeLists.txt  device_test.cpp  pipeline_test.cpp  scene_test.cpp
test/tz/: CMakeLists.txt  bundle_test.cpp  gpu_compute_renderer_test.cpp  gpu_graphics_renderer_test.cpp  gpu_initialise.cpp  gpu_resource_test.cpp  gpu_shader_test.cpp  initialise.cpp  io_image_test.cpp  lua_execute_test.cpp  matrix_test.cpp  ren_quad_test.cpp  vector_test.cpp
tools/: CMakeLists.txt
tools/textc/: CMakeLists.txt  main.cpp
tools/tzslc/: CMakeLists.txt  assert.hpp  header_export.cpp  header_export.hpp  matrix.tzsl  preprocessor.cpp  preprocessor.hpp  source_transform.hpp  space.tzsl  stdlib.hpp  tzsl.cpp  tzsl.hpp  tzslc_main.cpp
(+2566 files in other folders)
