# Doxygen Section
find_package(Doxygen REQUIRED)

get_target_property(TOPAZ_PUBLIC_HEADER_DIR topaz INTERFACE_INCLUDE_DIRECTORIES)
file(GLOB_RECURSE TOPAZ_PUBLIC_HEADERS CONFIGURE_DEPENDS ${TOPAZ_PUBLIC_HEADER_DIR}/*.h)

set(TOPAZ_VERSION_FILE ${PROJECT_SOURCE_DIR}/version.txt)
set(DOXYGEN_INPUT_DIR ${PROJECT_SOURCE_DIR}/include/tz)
set(DOXYGEN_OUTPUT_DIR ${CMAKE_CURRENT_BINARY_DIR})
set(DOXYGEN_INDEX_FILE ${DOXYGEN_OUTPUT_DIR}/html/index.html)

set(DOXYFILE_IN ${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in)
set(DOXYFILE_OUT ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)

configure_file(${DOXYFILE_IN} ${DOXYFILE_OUT} @ONLY)
file(MAKE_DIRECTORY ${DOXYGEN_OUTPUT_DIR}) #Doxygen won't create this for us
add_custom_command(OUTPUT ${DOXYGEN_INDEX_FILE}
                   DEPENDS ${TOPAZ_PUBLIC_HEADERS}
                   COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYFILE_OUT}
                   MAIN_DEPENDENCY ${DOXYFILE_OUT} ${DOXYFILE_IN}
                   COMMENT "Generating docs")

add_custom_target(Doxygen ALL DEPENDS ${DOXYGEN_INDEX_FILE})